// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PUBLIC/buttonGroup Phone 1`] = `
<storybook-wrapper>
  <app-button-group
    ng-reflect-label1="but1"
    ng-reflect-label2="but2"
  >
    <app-loginbox
      ng-reflect-cleanbox="normal"
    >
      <p>
        phone
      </p>
      <input
        data-testid="email"
        name="inputbox"
        placeholder="0912345678"
        type="phone"
      />
      <p>
        
      </p>
      <p>
        error:
      </p>
      <p>
        cleanbox:normal
      </p>
    </app-loginbox>
    <app-button
      data-testid="button1"
      ng-reflect-label="but1"
      ng-reflect-size="large"
    >
      <p>
         but1
      </p>
      <button
        class="storybook-button secondary large"
        data-testid="b1"
        ng-reflect-ng-class="storybook-button,secondary,lar"
        ng-reflect-ng-style="[object Object]"
        type="button"
      >
         but1
  
      </button>
    </app-button>
    <app-button
      data-testid="button2"
      ng-reflect-label="but2"
      ng-reflect-primary="true"
      ng-reflect-size="medium"
    >
      <p>
         but2
      </p>
      <button
        class="storybook-button primary medium"
        data-testid="b1"
        ng-reflect-ng-class="storybook-button,primary,mediu"
        ng-reflect-ng-style="[object Object]"
        type="button"
      >
         but2
  
      </button>
    </app-button>
  </app-button-group>
</storybook-wrapper>
`;

exports[`Storyshots PUBLIC/buttonGroup Status 2 1`] = `
<storybook-wrapper>
  <app-button-group
    ng-reflect-label1="button1"
    ng-reflect-label2="button2"
  >
    <app-loginbox
      ng-reflect-cleanbox="normal"
    >
      <p>
        phone
      </p>
      <input
        data-testid="email"
        name="inputbox"
        placeholder="0912345678"
        type="phone"
      />
      <p>
        
      </p>
      <p>
        error:
      </p>
      <p>
        cleanbox:normal
      </p>
    </app-loginbox>
    <app-button
      data-testid="button1"
      ng-reflect-label="button1"
      ng-reflect-size="small"
    >
      <p>
         button1
      </p>
      <button
        class="storybook-button secondary small"
        data-testid="b1"
        ng-reflect-ng-class="storybook-button,secondary,sma"
        ng-reflect-ng-style="[object Object]"
        type="button"
      >
         button1
  
      </button>
    </app-button>
    <app-button
      data-testid="button2"
      ng-reflect-label="button2"
      ng-reflect-primary="true"
      ng-reflect-size="medium"
    >
      <p>
         button2
      </p>
      <button
        class="storybook-button primary medium"
        data-testid="b1"
        ng-reflect-ng-class="storybook-button,primary,mediu"
        ng-reflect-ng-style="[object Object]"
        type="button"
      >
         button2
  
      </button>
    </app-button>
  </app-button-group>
</storybook-wrapper>
`;

exports[`Storyshots PUBLIC/buttonGroup Status 3 1`] = `
<storybook-wrapper>
  <app-button-group
    ng-reflect-label1="button1"
    ng-reflect-label2="button2"
  >
    <app-loginbox
      ng-reflect-cleanbox="normal"
    >
      <p>
        phone
      </p>
      <input
        data-testid="email"
        name="inputbox"
        placeholder="0912345678"
        type="phone"
      />
      <p>
        
      </p>
      <p>
        error:
      </p>
      <p>
        cleanbox:normal
      </p>
    </app-loginbox>
    <app-button
      data-testid="button1"
      ng-reflect-label="button1"
      ng-reflect-size="small"
    >
      <p>
         button1
      </p>
      <button
        class="storybook-button secondary small"
        data-testid="b1"
        ng-reflect-ng-class="storybook-button,secondary,sma"
        ng-reflect-ng-style="[object Object]"
        type="button"
      >
         button1
  
      </button>
    </app-button>
    <app-button
      data-testid="button2"
      ng-reflect-label="button2"
      ng-reflect-primary="true"
      ng-reflect-size="small"
    >
      <p>
         button2
      </p>
      <button
        class="storybook-button primary small"
        data-testid="b1"
        ng-reflect-ng-class="storybook-button,primary,small"
        ng-reflect-ng-style="[object Object]"
        type="button"
      >
         button2
  
      </button>
    </app-button>
  </app-button-group>
</storybook-wrapper>
`;

exports[`Storyshots Public/loginBox Default 1`] = `
<storybook-wrapper>
  <app-loginbox>
    <p>
      email
    </p>
    <input
      data-testid="email"
      name="inputbox"
      placeholder="aaa@mail.com"
      type="email"
    />
    <p>
      
    </p>
    <p>
      error:
    </p>
    <p>
      cleanbox:normal
    </p>
  </app-loginbox>
</storybook-wrapper>
`;

exports[`Storyshots Public/loginBox Email 1`] = `
<storybook-wrapper>
  <app-loginbox>
    <p>
      email
    </p>
    <input
      data-testid="email"
      name="inputbox"
      placeholder="aaa@mail.com"
      type="email"
    />
    <p>
      
    </p>
    <p>
      error:
    </p>
    <p>
      cleanbox:normal
    </p>
  </app-loginbox>
</storybook-wrapper>
`;

exports[`Storyshots Public/myButton Default 1`] = `
<storybook-wrapper>
  <app-button
    ng-reflect-label="press me!"
    ng-reflect-size="medium"
  >
    <p>
       press me!
    </p>
    <button
      class="storybook-button secondary medium"
      data-testid="b1"
      ng-reflect-ng-class="storybook-button,secondary,med"
      ng-reflect-ng-style="[object Object]"
      type="button"
    >
       press me!
  
    </button>
  </app-button>
</storybook-wrapper>
`;

exports[`Storyshots Public/myButton Disable 1`] = `
<storybook-wrapper>
  <app-button
    ng-reflect-disable="true"
    ng-reflect-label="press me!"
    ng-reflect-size="medium"
  >
    <p>
       press me!
    </p>
    <button
      class="storybook-button secondary medium disable"
      data-testid="b1"
      disabled=""
      ng-reflect-ng-class="storybook-button,secondary,med"
      ng-reflect-ng-style="[object Object]"
      type="button"
    >
       press me!
  
    </button>
  </app-button>
</storybook-wrapper>
`;

exports[`Storyshots Public/myButton Large 1`] = `
<storybook-wrapper>
  <app-button
    ng-reflect-label="large!"
    ng-reflect-size="large"
  >
    <p>
       large!
    </p>
    <button
      class="storybook-button secondary large"
      data-testid="b1"
      ng-reflect-ng-class="storybook-button,secondary,lar"
      ng-reflect-ng-style="[object Object]"
      type="button"
    >
       large!
  
    </button>
  </app-button>
</storybook-wrapper>
`;

exports[`Storyshots Public/myButton Medium 1`] = `
<storybook-wrapper>
  <app-button
    ng-reflect-label="press me!"
    ng-reflect-size="medium"
  >
    <p>
       press me!
    </p>
    <button
      class="storybook-button secondary medium"
      data-testid="b1"
      ng-reflect-ng-class="storybook-button,secondary,med"
      ng-reflect-ng-style="[object Object]"
      type="button"
    >
       press me!
  
    </button>
  </app-button>
</storybook-wrapper>
`;

exports[`Storyshots Public/myButton Primary 1`] = `
<storybook-wrapper>
  <app-button
    ng-reflect-label="press me!"
    ng-reflect-primary="true"
    ng-reflect-size="medium"
  >
    <p>
       press me!
    </p>
    <button
      class="storybook-button primary medium"
      data-testid="b1"
      ng-reflect-ng-class="storybook-button,primary,mediu"
      ng-reflect-ng-style="[object Object]"
      type="button"
    >
       press me!
  
    </button>
  </app-button>
</storybook-wrapper>
`;

exports[`Storyshots Public/myButton Secondary 1`] = `
<storybook-wrapper>
  <app-button
    ng-reflect-label="press me!"
    ng-reflect-primary="false"
    ng-reflect-size="medium"
  >
    <p>
       press me!
    </p>
    <button
      class="storybook-button secondary medium"
      data-testid="b1"
      ng-reflect-ng-class="storybook-button,secondary,med"
      ng-reflect-ng-style="[object Object]"
      type="button"
    >
       press me!
  
    </button>
  </app-button>
</storybook-wrapper>
`;

exports[`Storyshots Public/myButton Small 1`] = `
<storybook-wrapper>
  <app-button
    ng-reflect-label="press me!"
    ng-reflect-size="small"
  >
    <p>
       press me!
    </p>
    <button
      class="storybook-button secondary small"
      data-testid="b1"
      ng-reflect-ng-class="storybook-button,secondary,sma"
      ng-reflect-ng-style="[object Object]"
      type="button"
    >
       press me!
  
    </button>
  </app-button>
</storybook-wrapper>
`;
